kubernetes/argocd/apps/external-dns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
